# ForSEC

./: commands.txt  post_install.cmd  pyproject.toml  req2toml.py  requirements.txt  setup_uv.cmd  test_requirements.txt
